[package]
name = "sql-builder"
version = "0.1.0"
authors = ["Nate Strandberg <nater540@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
thiserror = "1.0.23"
structopt = "0.3.21"
serde_json = "1.0.61"
tokio = { version = "0.2", features = ["full"] }
#tokio   = { version = "1.0", features = ["full"] }
reqwest = { version = "0.10.10", features = ["json"] }
serde   = { version = "1.0.118", features = ["derive"] }

# Logging
log = "0.4.11"
pretty_env_logger = "0.4.0"

oxidized-force = { path = "../oxidized-force"}
